Add and implement accidentals